--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
         <div>
           <br>
-            <p style="text-align:center"><h1 p style="color: red">Bienvenidos</h1></p>
+            <p style="text-align:center"><h1 p style="color: red">BIENVENIDOS</h1></p>
         </div>
 
       
