--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta
 			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
+			content="width=device-width, initial-scale=1.0"/>
 		<title>Dulces Florez</title>
-		<link rel="stylesheet" href="pagina.css" />
+		<link rel="stylesheet" href="pagina.css"/>
 	</head>
 	<body>
 		<header>
@@ -22,7 +21,7 @@
 
 					<div class="container-logo">
 						<i class="fa-solid fa-mug-hot"></i>
-						<h1 class="logo"><a href="prueba.html">Dulces Florez</a></h1>
+						<h1 class="logo"><a href="index.html">Dulces Florez</a></h1>
 					</div>
 
 					<div class="container-user">
