--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						</div>
 					</div>
 
-					<!--  -->
+					<!-- Producto 3 -->
 					<div class="card-product">
 						<div class="container-img">
 							<img
@@ -189,7 +189,7 @@
 						</div>
 					</div>
 
-					<!--  -->
+					<!-- Prpducto 4 -->
 					<div class="card-product">
 						<div class="container-img">
 							<img src="imagenes dulces florez/imagen 2.png" alt="Macarons" />
