--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<span>Ver más</span>
 					</div>
 					<div class="card-category category-capuchino">
-						<p>Capuchino</p>
+						<p>Especiales</p>
 						<span>Ver más</span>
 					</div>
 				</div>
