--- a/prueba 2.html
+++ b/prueba 2.html
@@ -21,7 +21,7 @@
 
 					<div class="container-logo">
 						<i class="fa-solid fa-mug-hot"></i>
-						<h1 class="logo"><a href="prueba.html">Dulces Florez</a></h1>
+						<h1 class="logo"><a href="index.html">Dulces Florez</a></h1>
 					</div>
 
 					<div class="container-user">
