--- a/prueba 2.html
+++ b/prueba 2.html
@@ -39,7 +39,7 @@
 				<nav class="navbar container">
 					<i class="fa-solid fa-bars"></i>
 					<ul class="menu">
-						<li><a href="prueba.html">Inicio</a></li>
+						<li><a href="index.html">Inicio</a></li>
 						<li><a href="prueba 3.html">Productos</a></li>
 						<li><a href="prueba 2.html">Ubicacion</a></li>
 					</ul>
