--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<ul class="menu">
 						<li><a href="index.html">Inicio</a></li>
 						<li><a href="pagina 3.html">Productos</a></li>
-						<li><a href="pagina 2.html">Ubicacion</a></li>
+						<li><a href="prueba 2.html">Ubicacion</a></li>
 					</ul>
 
 					<form class="search-form">
