--- a/index.html
+++ b/index.html
@@ -124,10 +124,7 @@
 					<!-- Producto 2 -->
 					<div class="card-product">
 						<div class="container-img">
-							<img
-								src="imagenes dulces florez/imagen 5.png"
-								alt="Torta en forma de letra"
-							/>
+							<img src="imagenes dulces florez/imagen 5.png" alt="Torta en forma de letra" />
 							<div class="button-group">
 								<span>
 									<i class="fa-regular fa-eye"></i>
