--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<i class="fa-solid fa-bars"></i>
 					<ul class="menu">
 						<li><a href="index.html">Inicio</a></li>
-						<li><a href="pagina 3.html">Productos</a></li>
+						<li><a href="index.html">Productos</a></li>
 						<li><a href="prueba 2.html">Ubicacion</a></li>
 					</ul>
 
@@ -124,7 +124,7 @@
 					<!-- Producto 2 -->
 					<div class="card-product">
 						<div class="container-img">
-							<img src="imagenes dulces florez/imagen 5.png" alt="Torta en forma de letra" />
+							<img src="imagenes dulces florez/imagen 5.PNG" alt="Torta en forma de letra" />
 							<div class="button-group">
 								<span>
 									<i class="fa-regular fa-eye"></i>
@@ -155,10 +155,7 @@
 					<!--  -->
 					<div class="card-product">
 						<div class="container-img">
-							<img
-								src="imagenes dulces florez/imagen 6.png"
-								alt="Tortas"
-							/>
+							<img src="imagenes dulces florez/imagen 6.PNG" alt="Tortas"/>
 							<div class="button-group">
 								<span>
 									<i class="fa-regular fa-eye"></i>
@@ -189,7 +186,7 @@
 					<!--  -->
 					<div class="card-product">
 						<div class="container-img">
-							<img src="imagenes dulces florez/imagen 2.png" alt="Macarons" />
+							<img src="imagenes dulces florez/imagen 2.PNG" alt="Macarons" />
 							<div class="button-group">
 								<span>
 									<i class="fa-regular fa-eye"></i>
