--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<i class="fa-solid fa-bars"></i>
 					<ul class="menu">
 						<li><a href="index.html">Inicio</a></li>
-						<li><a href="">Productos</a></li>
+						<li><a href="index.html">Productos</a></li>
 						<li><a href="prueba 2.html">Ubicacion</a></li>
 					</ul>
 
