--- a/prueba 3.html
+++ b/prueba 3.html
@@ -125,7 +125,7 @@
 					<div class="card-product">
 						<div class="container-img">
 							<img
-								src="imagenes dulces florez/imagen 5.png"
+								src="imagenes dulces florez/imagen 5.PNG"
 								alt="Torta en forma de letra"
 							/>
 							<div class="button-group">
@@ -159,7 +159,7 @@
 					<div class="card-product">
 						<div class="container-img">
 							<img
-								src="imagenes dulces florez/imagen 6.png"
+								src="imagenes dulces florez/imagen 6.PNG"
 								alt="Tortas"
 							/>
 							<div class="button-group">
@@ -192,7 +192,7 @@
 					<!--  -->
 					<div class="card-product">
 						<div class="container-img">
-							<img src="imagenes dulces florez/imagen 2.png" alt="Macarons" />
+							<img src="imagenes dulces florez/imagen 2.PNG" alt="Macarons" />
 							<div class="button-group">
 								<span>
 									<i class="fa-regular fa-eye"></i>
