--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
 								<i class="fa-brands fa-facebook-f"></i>
 							</span>
 							<span class="instagram">
+								<li><a href="https://www.instagram.com/dulcesflorez/">instagram</a></li>
 								<i class="fa-brands fa-instagram"></i>
 							</span>
 						</div>
