--- a/prueba 2.html
+++ b/prueba 2.html
@@ -163,12 +163,11 @@
 					<div class="information">
 						<p class="title-footer">Información</p>
 						<ul>
-							<li><a href="#">Acerca de Nosotros</a></li>
-							<li><a href="#">Que hacemos en la Empresa</a></li>
-							<li><a href="#">Que nos hace Diferente</a></li>
-							<li><a href="#">Quienes Somos</a></li>
-                            <li><a href="#">Porque invertir en Nosotros</a></li>
-							<li><a href="#">Contactános</a></li>
+							<li><a href="prueba 4.html">Acerca de Nosotros</a></li>
+							<li><a href="prueba 4.html">Que hacemos en la Empresa</a></li>
+							<li><a href="prueba 4.html">Que nos hace Diferente</a></li>
+							<li><a href="prueba 4.html">Quienes Somos</a></li>
+                            <li><a href="prueba 4.html">Porque invertir en Nosotros</a></li>
 						</ul>
 					</div>
 
